# kiosk-screen

./: .dockerignore  .gitignore  AGENTS.md  README.md  docker-compose.yml  skills-lock.json
backend/: .dockerignore  .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_kiosk_schema.py  0002_admin_media_uploads.py  0003_api_keys.py  0003_remote_control_polling.py  0004_display_control_state.py  0005_merge_heads.py  0006_drop_client_ad_items_label.py  0007_drop_client_concept.py  0008_preconfigured_iframes_and_video_end.py  0009_remote_control_navigation.py  0010_remote_control_fullscreen.py  0011_event_branding.py  0012_content_rotation_modes.py  0013_remote_nav_pause_resume.py  0014_remote_control_jump_to.py  0015_relax_kiosk_region_ratio.py  0016_event_branding_layout.py  0017_content_is_novelty.py  0018_user_auth_sessions.py  0019_inline_ad_item_border.py  0020_deprecate_remote_control_polling.py  0021_kiosk_connections.py  0022_display_layout_profiles.py  0023_iframe_css_scale.py  0024_per_display_iframe_scale.py
backend/app/: __init__.py  config.py  main.py
backend/app/api/: README.md  ads.py  approved_domains.py  auth.py  clients.py  configuration.py  content.py  display.py  display_devices.py  display_stream.py  errors.py  event_branding.py  event_configuration.py  events.py  health.py  iframes.py  mappers.py  media.py  middleware.py  openapi.py  readiness.py  router.py  schemas.py  users.py
backend/app/application/: README.md  iframe_runtime.py  (+1 more)
backend/tests/: conftest.py
(+999 files in other folders)
