[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "kiosk-screen-backend"
version = "0.1.0"
description = "FastAPI backend for the kiosk screen application"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.13",
  "fastapi>=0.115",
  "psycopg[binary]>=3.2",
  "pydantic>=2.8",
  "sqlalchemy>=2.0",
  "uvicorn[standard]>=0.30",
  "python-multipart",
  "redis>=5.0"
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27",
  "pytest>=8.2",
  "pyyaml>=6.0",
  "python-multipart",
  "fakeredis>=2.26"
]

[project.scripts]
kiosk-openapi = "app.api.openapi:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
  "postgres: tests that require a running PostgreSQL instance with the schema migrated",
  "redis: tests that require Redis or fakeredis for display stream orchestration",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
